--- a/app/webroot/less/default/components/search.less
+++ b/app/webroot/less/default/components/search.less
@@ -11,20 +11,23 @@
 	float:left;
 	width:70%;
 	margin-right:.25em;
+	margin-bottom:0;
+	margin-top:0.0625em;
+	height:1.0625em;
 }
 .search .submit {
 	float:left;
 	border:1px solid @border-3;
 }
 .search button {
- 	height:2.1em;
+ 	height:2em;
 	min-width:4em;
 }
 .search button .icon {
 	font-size:1.1em;
 }
 .search button .icon:before {
-	margin-top:-0.05em;
+	margin-top:-0.1em;
 }
 
 /* remove webkit search input decoration and cancel button */
