--- a/app/webroot/less/default/components/tableview.less
+++ b/app/webroot/less/default/components/tableview.less
@@ -36,6 +36,9 @@
   width:100%;
 }
 
+.tableview table thead th:last-child {
+	padding-right:17px;
+}
 /* rows */
 .tableview table th,
 .tableview table td {
